--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,12 +4,16 @@
       android:screenOrientation="landscape"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="6" android:targetSdkVersion="11" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-sdk android:targetSdkVersion="17" android:minSdkVersion="10"/>
+   
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name="TonomeActivity"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-                  android:configChanges="keyboard|keyboardHidden|orientation">
+                  android:configChanges="keyboard|keyboardHidden|orientation"
+                  android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
